# agnostics

./: .gitignore  Makefile.am  README  configure.ac  meson.build
data/: Makefile.am  TEMPLATE.sh  agnostics.desktop.in  agnostics.ui  analyseboot.sh  meson.build  piagnostics.desktop.in  piagnostics.ui  sd_bench.fio  sdtest.sh  traceboot.sh
debian/: changelog  control  copyright  rules
po/: POTFILES.in  en_GB.po  hy.po  it.po  ko.po  lt.po  pl.po  sk.po  zh_CN.po
src/: Makefile.am  agnostics.c  meson.build  piagnostics.c
